# golf-league

./: .env.example  .gitignore  index.html  package-lock.json  package.json  schema.sql  supabase-friends-migration.sql  supabase-schema.sql  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AppPage.tsx  TutorialModal.tsx
src/contexts/: AuthContext.tsx
src/data/: courses.ts
src/hooks/: useUpdater.ts
src/lib/: discord.ts  scorecardAI.ts  scoring.ts  supabase.ts
src/pages/: AdminScreen.tsx  AuthScreen.tsx  CreateLeagueScreen.tsx  DashboardScreen.tsx  FriendsScreen.tsx  LeagueHubScreen.tsx  ProfileScreen.tsx  RoundScreen.tsx  SeasonStandingsScreen.tsx
src/types/: database.ts
