[package]
name = "golf-league"
version = "0.1.8"
description = "The Clubhouse - Golf League Manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tiny_http = "0.12"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

# Screen capture and OCR
screenshots = "0.8"
image = "0.25"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
